fixed button issue where text was not centered

--- a/pattern-lab/source/_patterns/00-ui-kit/04-buttons/_glp-btn.scss
+++ b/pattern-lab/source/_patterns/00-ui-kit/04-buttons/_glp-btn.scss
@@ -6,8 +6,16 @@
     height:40px;
     line-height:0;
     font-size:16px;
+  display:flex;
+  align-items:center;
+  margin-bottom:.5em;
+  
+  svg {
+	margin-left:.5em;
+  }
 }
 
 [class^='pe-btn__cta'], [class*='pe-btn__cta'],[class^='pe-btn__primary'], [class*='pe-btn__primary'] {
 	border:0;
 }
+
